fix: spinner alignment in android chrome

--- a/frontend/src/styles/full-screen-overlay.scss
+++ b/frontend/src/styles/full-screen-overlay.scss
@@ -69,20 +69,18 @@
 
 .fullscreen-overlay {
 
+  text-align: center;
   width: 100vw;
   max-width: 100%;
-  height: 100vh;
+  height: 100%;
   position: absolute;
   z-index: 1000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
   top: 0;
 
   img {
     max-width: 100px;
     margin-bottom: 5vh;
+    margin-top: 22.5vh;
   }
 
   &.paused {
@@ -107,7 +105,7 @@
     color: #fff;
     text-align: center;
     font-size: calc(1rem + 4vw);
-    margin: 0;
+    margin: auto;
     max-width: 70%;
     text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.2);
   }
